# rlpbr

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindCUDAToolkit.cmake
data/: LICENSE.md
include/: rlpbr.hpp
include/rlpbr/: backend.hpp  config.hpp  environment.hpp  environment.inl  fwd.hpp  preprocess.hpp  render.hpp  utils.hpp
src/: CMakeLists.txt  common.hpp  gltf.cpp  gltf.hpp  habitat_json.hpp  import.cpp  import.hpp  optix_device.cuh  optix_render.cpp  optix_render.hpp  optix_scene.cpp  optix_scene.hpp  optix_shader.cu  optix_shader.hpp  optix_utils.cpp  optix_utils.hpp  preprocess.cpp  rlpbr.cpp  scene.cpp  scene.hpp  shader.hpp  utils.hpp
src/editor/: CMakeLists.txt  datagen.cpp  editor.cpp  editor.frag  editor.hpp  editor.vert  file_select.cpp  file_select.hpp  imgui_extensions.cpp  imgui_extensions.hpp  json.cpp  json.hpp  navmesh.cpp  navmesh.frag  navmesh.hpp  navmesh.vert  renderer.cpp  renderer.hpp  shader.hpp  shader_common.h  stats.cpp  stats.cu  stats.hpp  utils.hpp
src/optix/: CMakeLists.txt  collisions.cu  config.hpp  cuda_utils.hpp  device.cuh  math_utils.cuh  physics.cpp  physics.hpp  render.cpp  render.hpp  sampler.cuh  scene.cpp  scene.hpp  shader.cu  shader.hpp  sobol.cuh  texture.cpp  texture.hpp  texture.inl  utils.cpp  utils.hpp
src/preprocess/: CMakeLists.txt  gltf.cpp  gltf.hpp  gltf.inl  habitat_json.cpp  habitat_json.hpp  habitat_json.inl  import.cpp  import.hpp  physics.hpp  physics.inl  preprocess.cpp  preprocess.hpp  texture.hpp
src/rlpbr_backend/: CMakeLists.txt  common.hpp  scene.cpp  scene.hpp  shader.hpp
src/rlpbr_core/: CMakeLists.txt  common.cpp  common.hpp  device.h  device.hpp  physics.hpp  scene.cpp  scene.hpp  utils.hpp
src/vulkan/: CMakeLists.txt  config.hpp  core.cpp  core.hpp  cuda_interop.cpp  cuda_interop.hpp  denoiser.cpp  denoiser.hpp  descriptors.cpp  descriptors.hpp  descriptors.inl  dispatch.cpp  dispatch.hpp  dispatch.template  linux_hacks.cpp  memory.cpp  memory.hpp  memory.inl  present.cpp  present.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  shader.inl  utils.cpp  utils.hpp  utils.inl
src/vulkan/scripts/: gen_vk_dispatch.py
src/vulkan/shaders/: basic.comp  biased.comp  brdf.glsl  bsdf.glsl  camera.glsl  comp_definitions.h  exposure_common.glsl  exposure_histogram.comp  geometry.glsl  inputs.glsl  lighting.glsl  lighting_histogram.hlsl  materials.glsl  materials.h  math.glsl  math.h  mesh_common.h  meshcull.comp  packed.h  pathtracer.comp  restir.glsl  sampler.glsl  sampler.h  shader_common.h  tonemap.comp  tonemap_histogram.glsl  uber.frag  uber.vert  unpack.glsl  utils.glsl  utils.h
